# src/server/swagger/swagger.json
@@ -354,70 +354,40 @@
 							"items": {
 								"$ref": "#/definitions/TokenPairTradeInfo"
 							}
-						},
-						"examples": {
-							"application/json": {
-								"tokenA": {
-									"address": "0x23d4fe8c00ae3b267ea349eed18ed32b71c93f4d",
-									"maxAmount": "1000000000000000000",
-									"minAmount": "000000000000000001",
-									"precision": 6
-								},
-								"tokenB": {
-									"address": "0x23d4fe8c00ae3b267ea349eed18ed32b71c93f4d",
-									"maxAmount": "1000000000000000000",
-									"minAmount": "000000000000000001",
-									"precision": 6
-								}
-							}
-						}
-					},
-					"400": {
-						"description": "A parameter is not informed correctly.",
-						"schema": {
-							"$ref": "#/definitions/ErrorModel"
-						}
-					},
-					"500": {
-						"description": "An unknown error occurred.",
-						"schema": {
-							"$ref": "#/definitions/ErrorModel"
 						}
 					}
 				},
-				"description": "This method follows the specifications of the Standard Relayer API v0 as proposed by the 0x Projext team (https://github.com/0xProject/standard-relayer-api).",
-				"summary": "Lists all available trading pairs that this relayer current supports.",
 				"security": [],
 				"parameters": [
 					{
-						"description": "Address of a token that could be on either side of the trade: either as a maker, or as a taker.",
 						"in": "query",
 						"name": "tokenA",
 						"required": false,
 						"type": "string"
 					},
 					{
-						"description": "Address of a token that could be on either side of the trade: either as a maker, or as a taker.",
 						"in": "query",
 						"name": "tokenB",
 						"required": false,
 						"type": "string"
 					},
 					{
-						"description": "Which page should be returned. If this parameter is not informed, then it will take the default value of 1. Page numbers start at 1.",
+						"description": "m",
 						"in": "query",
 						"name": "page",
 						"required": false,
-						"format": "double",
-						"type": "number"
+						"format": "int32",
+						"type": "integer",
+						"minimum": 1
 					},
 					{
-						"description": "Number of token pairs that should be returned on each page. If this parameter is not informed, then it will take the default value of the total number of token pairs found.",
 						"in": "query",
 						"name": "per_page",
 						"required": false,
-						"format": "double",
-						"type": "number"
+						"format": "int32",
+						"type": "integer",
+						"minimum": 1,
+						"maximum": 100
 					}
 				]
 			}
